# sms-bulk-sender

./: .env.example  .gitignore  .metadata  README.md  pubspec.yaml  pyproject.toml  test_messages.csv
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/denverporchfest/sms_bulk_sender/: MainActivity.kt
lib/: main.dart
lib/models/: sms_row.dart
lib/services/: csv_parser.dart  sms_service.dart
sms_bulk_sender/: __init__.py  cli.py  infinireach.py  recipients.py
test/: csv_parser_test.dart
tests/: test_infinireach.py  test_recipients.py
