[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "porchfest-sms-bulk-sender"
version = "0.1.0"
description = "Safe bulk SMS sender for Denver PorchFest operations"
requires-python = ">=3.11"
dependencies = [
  "google-auth==2.56.2",
  "gspread==6.2.1",
]

[project.scripts]
porchfest-sms = "sms_bulk_sender.cli:main"

[tool.setuptools.packages.find]
include = ["sms_bulk_sender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
